--- a/vendas.html
+++ b/vendas.html
@@ -7,7 +7,7 @@
     <title>Teste commit</title>
 </head>
 <body>
-    <h1>Página de vendas</h1>
+    <p>Vendas = R$ 5.000,00</p>
     <a href="index.html">Voltar para a página de vendas</a>
 
 </body>
