--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Página de blog</h1>
-    <h2>psot número 1</h2>
+    <h2>post número 1</h2>
+    <h2>post número 2</h2>
     <a href="index.html">Voltar para a página de vendas</a>
 
 </body>
